changes in headline

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <title>My first Page</title>
   </head>
   <body>
-    <h1>this is an h1 tag</h1>
-    <h2>this is an h2 tag</h2>
-    <h3>this is h3 tag</h3>
-    <p>this is a paragraph <br></p>
-    <textarea name="Comments" rows="8" cols="80"></textarea>
-    <br><button type="submit" name="submitbutton">Submit</button>
+    <h1 style="text-align: center;">Zeeshan Hussain</h1>
   </body>
 </html>
