Added Bio and Education

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My first Page</title>
-  </head>
-  <body>
-    <h1 style="text-align: center;">Zeeshan Hussain</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Zeeshan's Personal Site</title>
+</head>
+
+<body>
+  <h1>Zeeshan Hussain</h1>
+  <p><em>Computer Science Student</em></p>
+  <p>
+    I am a Computer Science Student at JNT University - Hyderabad
+    Currently persuing B.tech 3rd year.
+  </p>
+  <hr>
+  <h3>
+    Education <br>
+  </h3>
+  <ul>
+    <li>
+      Jawaharlal Nehru Technological University, Hyderabad <br>
+      6.5 CGPA <small>upto 4th sem.</small> <br>
+    </li>
+    <br>
+    <li>
+      Manas Vidyalaya, Jehanabad <br>
+      68.4% in 12th board. <br>
+    </li>
+    <br>
+    <li>
+      Manas Vidyalaya, Jehanabad <br>
+      8.8 CGPA in 10th board. <br>
+    </li>
+    <br>
+  </ul>
+</body>
+
 </html>
