Contact block added

--- a/index.html
+++ b/index.html
@@ -7,33 +7,105 @@
 </head>
 
 <body>
-  <h1>Zeeshan Hussain</h1>
-  <p><em>Computer Science Student</em></p>
-  <p>
-    I am a Computer Science Student at JNT University - Hyderabad
-    Currently persuing B.tech 3rd year.
-  </p>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="zeeshan.jpg" alt="Zeeshan Hussain profile picture"></td>
+      <td>
+        <h1>Zeeshan Hussain</h1>
+        <p><em>Computer Science Student</em></p>
+        <p>
+          I am a Computer Science Student at JNT University - Hyderabad
+          Currently persuing B.tech 3rd year.
+        </p>
+      </td>
+    </tr>
+  </table>
+
   <hr>
   <h3>
     Education <br>
   </h3>
+  <hr>
   <ul>
     <li>
-      Jawaharlal Nehru Technological University, Hyderabad <br>
+      <a href="http://jntuh.ac.in">Jawaharlal Nehru Technological University, Hyderabad</a>
+      <br>
       6.5 CGPA <small>upto 4th sem.</small> <br>
     </li>
     <br>
     <li>
-      Manas Vidyalaya, Jehanabad <br>
+      <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a> <br>
       68.4% in 12th board. <br>
     </li>
     <br>
     <li>
-      Manas Vidyalaya, Jehanabad <br>
+      <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a> <br>
       8.8 CGPA in 10th board. <br>
     </li>
     <br>
   </ul>
+  <h3>Skill</h3>
+  <hr>
+  <table cellspacing="10">
+    <tr>
+      <td>C</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+
+    <tr>
+      <td>C++</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Core Java</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Python</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>HTML5</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>CSS3</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>jQuery</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>PHP</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>MySQL</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>NodeJS</td>
+      <td>⭐⭐</td>
+    </tr>
+  </table>
+<footer>
+  <h2>Contact Me!</h2>
+  <form action="mailto:zeeshan1414@gmail.com" method="post" enctype="text/plain">
+    <label>Name:</label><br>
+    <input type="text" name="MyName"><br>
+    <label>Email:</label><br>
+    <input type="email" name="MyEmail"><br>
+    <label>Message:</label><br>
+    <textarea name="MyMessage" rows="4" cols="40"></textarea><br>
+    <input type="submit" name="Submit_Contact_Form">
+
+  </form>
+</footer>
 </body>
 
 </html>
