Skills list updated

--- a/index.html
+++ b/index.html
@@ -46,66 +46,77 @@
   </ul>
   <h3>Skill</h3>
   <hr>
-  <table cellspacing="10">
+  <table>
     <tr>
-      <td>C</td>
-      <td>⭐⭐⭐</td>
-    </tr>
+      <td>
+        <table>
+          <tr>
+            <td>C</td>
+            <td>⭐⭐⭐</td>
+          </tr>
 
-    <tr>
-      <td>C++</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Core Java</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Python</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>JavaScript</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>HTML5</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>CSS3</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>jQuery</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>PHP</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>MySQL</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>NodeJS</td>
-      <td>⭐⭐</td>
+          <tr>
+            <td>C++</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Core Java</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Python</td>
+            <td>⭐⭐</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>⭐⭐</td>
+          </tr>
+
+        </table>
+      </td>
+      <td>
+        <table>
+          <tr>
+            <td>HTML5</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>CSS3</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>jQuery</td>
+            <td>⭐⭐</td>
+          </tr>
+          <tr>
+            <td>PHP</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>MySQL</td>
+            <td>⭐⭐</td>
+          </tr>
+          <tr>
+            <td>NodeJS</td>
+            <td>⭐⭐</td>
+          </tr>
+        </table>
     </tr>
   </table>
-<footer>
-  <h2>Contact Me!</h2>
-  <form action="mailto:zeeshan1414@gmail.com" method="post" enctype="text/plain">
-    <label>Name:</label><br>
-    <input type="text" name="MyName"><br>
-    <label>Email:</label><br>
-    <input type="email" name="MyEmail"><br>
-    <label>Message:</label><br>
-    <textarea name="MyMessage" rows="4" cols="40"></textarea><br>
-    <input type="submit" name="Submit_Contact_Form">
 
-  </form>
-</footer>
+  <footer>
+    <h2>Contact Me!</h2>
+    <form action="mailto:zeeshan1414@gmail.com" method="post" enctype="text/plain">
+      <label>Name:</label><br>
+      <input type="text" name="MyName"><br>
+      <label>Email:</label><br>
+      <input type="email" name="MyEmail"><br>
+      <label>Message:</label><br>
+      <textarea name="MyMessage" rows="4" cols="40"></textarea><br>
+      <input type="submit" name="Submit_Contact_Form">
+
+    </form>
+  </footer>
 </body>
 
 </html>
