--- a/index.html
+++ b/index.html
@@ -1,122 +1,131 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Zeeshan's Personal Site</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Zeeshan's Personal Site</title>
-</head>
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td>
+          <img
+            src="https://scontent.fhyd5-1.fna.fbcdn.net/v/t1.0-1/p160x160/18402886_1357367791019590_3144022052970702659_n.jpg?_nc_cat=106&_nc_ht=scontent.fhyd5-1.fna&oh=484f4d5be9b10e59d61c21406e611515&oe=5D21A234"
+            alt="Zeeshan Hussain profile picture"
+          />
+        </td>
+        <td>
+          <h1>Zeeshan Hussain</h1>
+          <p><em>Computer Science Student</em></p>
+          <p>
+            I am a Computer Science Student at JNT University - Hyderabad
+            Currently persuing B.tech 3rd year.
+          </p>
+        </td>
+      </tr>
+    </table>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="https://scontent.fhyd5-1.fna.fbcdn.net/v/t1.0-1/p160x160/18402886_1357367791019590_3144022052970702659_n.jpg?_nc_cat=106&_nc_ht=scontent.fhyd5-1.fna&oh=484f4d5be9b10e59d61c21406e611515&oe=5D21A234" alt="Zeeshan Hussain profile picture"></td>
-      <td>
-        <h1>Zeeshan Hussain</h1>
-        <p><em>Computer Science Student</em></p>
-        <p>
-          I am a Computer Science Student at JNT University - Hyderabad
-          Currently persuing B.tech 3rd year.
-        </p>
-      </td>
-    </tr>
-  </table>
+    <hr />
+    <h3>Education <br /></h3>
+    <hr />
+    <ul>
+      <li>
+        <a href="http://jntuh.ac.in"
+          >Jawaharlal Nehru Technological University, Hyderabad</a
+        >
+        <br />
+        6.5 CGPA <small>upto 4th sem.</small> <br />
+      </li>
+      <br />
+      <li>
+        <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a>
+        <br />
+        68.4% in 12th board. <br />
+      </li>
+      <br />
+      <li>
+        <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a>
+        <br />
+        8.8 CGPA in 10th board. <br />
+      </li>
+      <br />
+    </ul>
+    <h3>Skill</h3>
+    <hr />
+    <table>
+      <tr>
+        <td>
+          <table>
+            <tr>
+              <td>C</td>
+              <td>⭐⭐⭐</td>
+            </tr>
 
-  <hr>
-  <h3>
-    Education <br>
-  </h3>
-  <hr>
-  <ul>
-    <li>
-      <a href="http://jntuh.ac.in">Jawaharlal Nehru Technological University, Hyderabad</a>
-      <br>
-      6.5 CGPA <small>upto 4th sem.</small> <br>
-    </li>
-    <br>
-    <li>
-      <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a> <br>
-      68.4% in 12th board. <br>
-    </li>
-    <br>
-    <li>
-      <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a> <br>
-      8.8 CGPA in 10th board. <br>
-    </li>
-    <br>
-  </ul>
-  <h3>Skill</h3>
-  <hr>
-  <table>
-    <tr>
-      <td>
-        <table>
-          <tr>
-            <td>C</td>
-            <td>⭐⭐⭐</td>
-          </tr>
+            <tr>
+              <td>C++</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>Core Java</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>Python</td>
+              <td>⭐⭐</td>
+            </tr>
+            <tr>
+              <td>JavaScript</td>
+              <td>⭐⭐</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table>
+            <tr>
+              <td>HTML5</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>jQuery</td>
+              <td>⭐⭐</td>
+            </tr>
+            <tr>
+              <td>PHP</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>MySQL</td>
+              <td>⭐⭐</td>
+            </tr>
+            <tr>
+              <td>NodeJS</td>
+              <td>⭐⭐</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
 
-          <tr>
-            <td>C++</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Core Java</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Python</td>
-            <td>⭐⭐</td>
-          </tr>
-          <tr>
-            <td>JavaScript</td>
-            <td>⭐⭐</td>
-          </tr>
-
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>HTML5</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>CSS3</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>jQuery</td>
-            <td>⭐⭐</td>
-          </tr>
-          <tr>
-            <td>PHP</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>MySQL</td>
-            <td>⭐⭐</td>
-          </tr>
-          <tr>
-            <td>NodeJS</td>
-            <td>⭐⭐</td>
-          </tr>
-        </table>
-    </tr>
-  </table>
-
-  <footer>
-    <h2>Contact Me!</h2>
-    <form action="mailto:zeeshan1414@gmail.com" method="post" enctype="text/plain">
-      <label>Name:</label><br>
-      <input type="text" name="MyName"><br>
-      <label>Email:</label><br>
-      <input type="email" name="MyEmail"><br>
-      <label>Message:</label><br>
-      <textarea name="MyMessage" rows="4" cols="40"></textarea><br>
-      <input type="submit" name="Submit_Contact_Form">
-
-    </form>
-  </footer>
-</body>
-
+    <footer>
+      <h2>Contact Me!</h2>
+      <form
+        action="mailto:zeeshan1414@gmail.com"
+        method="post"
+        enctype="text/plain"
+      >
+        <label>Name:</label><br />
+        <input type="text" name="MyName" /><br />
+        <label>Email:</label><br />
+        <input type="email" name="MyEmail" /><br />
+        <label>Message:</label><br />
+        <textarea name="MyMessage" rows="4" cols="40"></textarea><br />
+        <input type="submit" name="Submit_Contact_Form" />
+      </form>
+    </footer>
+  </body>
 </html>
