minor changes in styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <tr>
         <td>
           <img
+            id="profile-pic"
             src="https://scontent.fhyd5-1.fna.fbcdn.net/v/t1.0-1/p160x160/18402886_1357367791019590_3144022052970702659_n.jpg?_nc_cat=106&_nc_ht=scontent.fhyd5-1.fna&oh=484f4d5be9b10e59d61c21406e611515&oe=5D21A234"
             alt="Zeeshan Hussain profile picture"
           />
@@ -112,7 +113,7 @@
     </table>
 
     <footer>
-      <h2>Contact Me!</h2>
+      <h2 id="contact-me">Contact Me!</h2>
       <form
         action="mailto:zeeshan1414@gmail.com"
         method="post"
