created a whole new design

--- a/index.html
+++ b/index.html
@@ -1,132 +1,165 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>Zeeshan's Personal Site</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Zeeshan Hussain</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/styles.css"
+    />
+    <link rel="icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento"
+      rel="stylesheet"
+    />
   </head>
-
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td>
-          <img
-            id="profile-pic"
-            src="https://scontent.fhyd5-1.fna.fbcdn.net/v/t1.0-1/p160x160/18402886_1357367791019590_3144022052970702659_n.jpg?_nc_cat=106&_nc_ht=scontent.fhyd5-1.fna&oh=484f4d5be9b10e59d61c21406e611515&oe=5D21A234"
-            alt="Zeeshan Hussain profile picture"
-          />
-        </td>
-        <td>
-          <h1>Zeeshan Hussain</h1>
-          <p><em>Computer Science Student</em></p>
-          <p>
-            I am a Computer Science Student at JNT University - Hyderabad
-            Currently persuing B.tech 3rd year.
-          </p>
-        </td>
-      </tr>
-    </table>
-
-    <hr />
-    <h3>Education <br /></h3>
-    <hr />
-    <ul>
-      <li>
-        <a href="http://jntuh.ac.in"
-          >Jawaharlal Nehru Technological University, Hyderabad</a
-        >
-        <br />
-        6.5 CGPA <small>upto 4th sem.</small> <br />
-      </li>
-      <br />
-      <li>
-        <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a>
-        <br />
-        68.4% in 12th board. <br />
-      </li>
-      <br />
-      <li>
-        <a href="http://manasvidyalaya.com">Manas Vidyalaya, Jehanabad</a>
-        <br />
-        8.8 CGPA in 10th board. <br />
-      </li>
-      <br />
-    </ul>
-    <h3>Skill</h3>
-    <hr />
-    <table>
-      <tr>
-        <td>
-          <table>
-            <tr>
-              <td>C</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-
-            <tr>
-              <td>C++</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Core Java</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Python</td>
-              <td>⭐⭐</td>
-            </tr>
-            <tr>
-              <td>JavaScript</td>
-              <td>⭐⭐</td>
-            </tr>
-          </table>
-        </td>
-        <td>
-          <table>
-            <tr>
-              <td>HTML5</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>CSS3</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>jQuery</td>
-              <td>⭐⭐</td>
-            </tr>
-            <tr>
-              <td>PHP</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>MySQL</td>
-              <td>⭐⭐</td>
-            </tr>
-            <tr>
-              <td>NodeJS</td>
-              <td>⭐⭐</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-
-    <footer>
-      <h2 id="contact-me">Contact Me!</h2>
-      <form
-        action="mailto:zeeshan1414@gmail.com"
-        method="post"
-        enctype="text/plain"
+    <header class="header">
+      <span class="mob-no">
+        <img src="images/phone.png" class="phone-icon" alt="phone-icon" />
+        +91-7989289306</span
       >
-        <label>Name:</label><br />
-        <input type="text" name="MyName" /><br />
-        <label>Email:</label><br />
-        <input type="email" name="MyEmail" /><br />
-        <label>Message:</label><br />
-        <textarea name="MyMessage" rows="4" cols="40"></textarea><br />
-        <input type="submit" name="Submit_Contact_Form" />
-      </form>
-    </footer>
+    </header>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.svg" alt="cloud" />
+
+      <h1>I'm Zeeshan.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
+      <img class="mountain" src="images/land.svg" alt="mountain" />
+      <img class="bottom-cloud" src="images/cloud.svg" alt="cloud" />
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img
+          src="https://scontent.fhyd5-1.fna.fbcdn.net/v/t1.0-1/p160x160/18402886_1357367791019590_3144022052970702659_n.jpg?_nc_cat=106&_nc_ht=scontent.fhyd5-1.fna&oh=484f4d5be9b10e59d61c21406e611515&oe=5D21A234"
+          alt="zeeshan-hussain"
+          class="profile-pic"
+        />
+        <h2>Hello.</h2>
+        <p class="profile-info">
+          I am a Computer Science Student at JNT University - Hyderabad,<br />
+          Currently persuing B.tech 3rd year.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-img" src="images/coding.svg" alt="code-img" />
+          <h3>Design & Development</h3>
+          <table>
+            <tr>
+              <td>
+                <table cellspacing="5">
+                  <tr>
+                    <td>C</td>
+                    <td>⭐⭐⭐</td>
+                  </tr>
+
+                  <tr>
+                    <td>C++</td>
+                    <td>⭐⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>Core Java</td>
+                    <td>⭐⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>Python</td>
+                    <td>⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>JavaScript</td>
+                    <td>⭐⭐</td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td>HTML5</td>
+                    <td>⭐⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>CSS3</td>
+                    <td>⭐⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>jQuery</td>
+                    <td>⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>PHP</td>
+                    <td>⭐⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>MySQL</td>
+                    <td>⭐⭐</td>
+                  </tr>
+                  <tr>
+                    <td>NodeJS</td>
+                    <td>⭐⭐</td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="skill-row">
+          <img
+            class="project-img"
+            src="images/innovation.png"
+            alt="project-img"
+          />
+          <h3 class="project-cls">Projects</h3>
+          <table>
+            <tr>
+              <td>
+                <ol>
+                  <li>
+                    Created a Wordpress Website publishing news about the
+                    University updates. (2016)
+                    <br />
+                    <a href="https://jntulive.wordpress.com/">JNTU Live</a>
+                    <br />
+                  </li>
+                  <li>
+                    Created a e-Commerce Website using woocommerce plug-in and
+                    deployed it on Google Cloud. (2018) <br />
+                    <a href="http://aamirscoupon.xyz/">Aamir's Coupon</a>
+                  </li>
+                </ol>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you need a geek to talk to.</h3>
+        <p class="contact-me-para">
+          Love technology as much as I do? let's talk about how awesome they
+          are! <br />
+          We can code to make a change!
+        </p>
+        <a class="butn" href="mailto:zeeshan1414@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/zeeshan-hussain"
+        >LinkedIn</a
+      >
+      <a class="footer-link" href="https://twitter.com/zeeshan_25">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/zeeshan.only4u"
+        >Facebook</a
+      >
+      <p class="copyright">© 2019 Zeeshan Hussain.</p>
+    </div>
   </body>
 </html>
